# DBus-Music-Pidgin-NCurses

./: CMakeLists.txt  RB-glue.h  RBS-glue.h  amarok-glue.h  amarok.h  dbus-listener.cpp  exaile-glue.h  exaile.h  music.h  pidgin-glue.h  pidgin.h  rhythmbox.h
